--- a/movieweb/main/templates/main/menu.html
+++ b/movieweb/main/templates/main/menu.html
@@ -11,7 +11,7 @@
     <li><a href="{% url 'account:register' %}">註冊</a></li>
   {% endif %}
   <li><a href="{% url 'ContactUs:ContactUsForms' %}">聯絡我們</a></li>
-  <li><a href="{% url 'Movie:OrderTicket' %}">線上訂票</a></li>
+  <li><a href="{% url 'Movie:detailview' %}">線上訂票</a></li>
   <li><a href="{% url 'Movie:MovieEquipment' %}">影城配備</a></li>
   <li><a href="{% url 'Movie:NEWS' %}">電影介紹</a></li>
   <li><a href="{% url 'main:main' %}">首頁</a></li>
