FKU web design 99.99%

--- a/movieweb/Movie/templates/Movie/MovieIntroduction.html
+++ b/movieweb/Movie/templates/Movie/MovieIntroduction.html
@@ -21,8 +21,8 @@
       <p>{{ Movie.content }}</p>
     </div>
     <div id="but">     
-        <input type ="button" onclick="javascript:location.href='http://127.0.0.1:8000/Movie/MovieIntroduction/'+{{ downID }}+'/'" value="上ㄧ部"></input>
-        <input type ="button" onclick="javascript:location.href='http://127.0.0.1:8000/Movie/MovieIntroduction/'+{{ upID }}+'/'" value="下ㄧ部"></input>        
+        <input type ="button" onclick="javascript:location.href='https://fcm777.herokuapp.com/Movie/MovieIntroduction/'+{{ downID }}+'/'" value="上ㄧ部"></input>
+        <input type ="button" onclick="javascript:location.href='https://fcm777.herokuapp.com/Movie/MovieIntroduction/'+{{ upID }}+'/'" value="下ㄧ部"></input>        
     </div>
     </center>
   </body>
