--- a/movieweb/Movie/templates/Movie/order_system.html
+++ b/movieweb/Movie/templates/Movie/order_system.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html>
 <head>
-    <title>订票页面</title>
+    <title>FCM 影城</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
