--- a/movieweb/Movie/templates/Movie/order_system.html
+++ b/movieweb/Movie/templates/Movie/order_system.html
@@ -23,6 +23,7 @@
             <th>電影名稱</th>
             <th>開播時間</th>
             <th>剩餘座位</th>
+            <th>電影信息</th>
         </tr>
         </thead>
         <tbody>
@@ -32,6 +33,7 @@
             <td>{{ ticket.name }}</td>
             <td>{{ ticket.time|date:"Y-m-d H:i" }}</td>
             <td>{{ ticket.seats }}</td>
+            <td>{{ ticket.brief }}</td>
         </tr>
         {% endfor %}
         </tbody>
