--- a/movieweb/Movie/templates/Movie/MovieEquipment.html
+++ b/movieweb/Movie/templates/Movie/MovieEquipment.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html>
   <head>
-    <title>FCM 影城</title>
+    <title>影城配備</title>
     <meta charset= "utf-8">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'Movie/css/MovieEquipment.css' %}">
