--- a/movieweb/account/templates/account/login.html
+++ b/movieweb/account/templates/account/login.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html>
   <head>
-    <title>FCM 影城</title>
+    <title>登入</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
   </head>
