--- a/movieweb/main/static/main/css/main.css
+++ b/movieweb/main/static/main/css/main.css
@@ -83,6 +83,8 @@ ul#menu li a{
 ul#menu li a:hover{
   background-color: white;
   color:black;
+  font-size: 20px;
+  line-height: 5em;
 }
 ul#menu1 li a:hover{
   background-color: white;
