--- a/movieweb/Movie/templates/Movie/MovieIntroduction.html
+++ b/movieweb/Movie/templates/Movie/MovieIntroduction.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html>
   <head>
-    <title>FCM 影城</title>
+    <title>電影介紹</title>
     <meta charset= "utf-8">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
   </head>
