--- a/movieweb/main/templates/main/menu.html
+++ b/movieweb/main/templates/main/menu.html
@@ -3,7 +3,9 @@
 <div id="menu">
 <label id="menu"> 
 <ul id="menu">
-  <img src="{% static 'main/img/logo.png' %}" width="100px" height="100px">
+  <a href="{% url 'main:main' %}">
+    <img src="{% static 'main/img/logo.png' %}" width="100px" height="100px">
+  </a>
   {% if user.is_authenticated %}
     <li><a href="{% url 'account:logout' %}">登出 ({{ user.username }})</a></li>
   {% else %}
